@@ -121,9 +121,7 @@
 				<version>2.18</version>
 
 				<configuration>
-					<forkCount>3</forkCount>
-					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					
 					<suiteXmlFiles>
 						<suiteXmlFile>src/test/resources/testRunners/amazonqa_regression.xml</suiteXmlFile>
 					</suiteXmlFiles>
